--- a/Perfil.html
+++ b/Perfil.html
@@ -15,10 +15,10 @@
                 <img src="img/icono-perfil.png" alt="Perfil">Perfil
             </a>
             <a href="Inicio.html">Inicio</a>
-            <a href="Información.html">Acerca de nosotros</a>
-            <a href="#">Productos</a>
-            <a href="#">Servicios disponibles</a>
-            <a href="#">Presupuesto</a>
+        <a href="Información.html">Acerca de nosotros</a>
+        <a href="Productos.html">Productos</a>
+        <a href="Servicios.html">Servicios disponibles</a>
+        <a href="Presupuesto.html">Presupuesto</a>
         </nav>
     </header>
 
