mostrar datos de la sesión en Perfil.html
cambiada la extensión de Perfil a php y configuración para permitir el obtener datos de la sesión activa

--- a/Información.html
+++ b/Información.html
@@ -13,7 +13,7 @@
     <!-- Encabezado con navegación -->
     <header>
         <nav>
-            <a href="Perfil.html" class="logo-perfil">
+            <a href="Perfil.php" class="logo-perfil">
                 <img src="img/icono-perfil.png" alt="Perfil">Perfil
             </a>
             <a href="Inicio.html">Inicio</a>
