--- a/Inicio.html
+++ b/Inicio.html
@@ -31,7 +31,7 @@
 
     <!-- Barra de navegación -->
     <nav>
-        <a href="Perfil.html" class="logo-perfil">
+        <a href="Perfil.php" class="logo-perfil">
             <img src="img/icono-perfil.png" alt="Perfil">
             Perfil
         </a>
