--- a/Productos.html
+++ b/Productos.html
@@ -36,6 +36,6 @@
             <button>Agregar al presupuesto</button>
         </div>
     </div>
-    <script src="script.js"></script>
+    <script src="jscript.js"></script>
 </body>
 </html>
