--- a/Productos.html
+++ b/Productos.html
@@ -14,7 +14,7 @@
         <section class="productos">
             <!-- Lista de productos -->
             <div class="producto" onclick="mostrarVentana()">
-                <img src="laptop.jpg" alt="Laptop HP">
+                <img src="Laptop.jpg" alt="Laptop HP">
                 <h2>Laptop HP 240 G9</h2>
                 <p class="precio">$5,299</p>
             </div>
@@ -25,7 +25,7 @@
     <div id="ventanaEmergente" class="ventana">
         <div class="contenido">
             <span class="cerrar" onclick="cerrarVentana()">&times;</span>
-            <img src="laptop.jpg" alt="Laptop HP">
+            <img src="Laptop.jpg" alt="Laptop HP">
             <h2>Laptop HP 240 G9 plateada 14"</h2>
             <p class="descripcion">
                 Procesador: Intel Celeron N4500 <br>
