--- a/Productos.html
+++ b/Productos.html
@@ -3,39 +3,95 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Productos</title>
+    <title>Catalogo de productos</title>
     <link rel="stylesheet" href="Productos.css">
 </head>
 <body>
     <header>
-        <h1>Catálogo de Productos</h1>
+        <h1>Catálogo de Computadoras</h1>
     </header>
-    <main>
-        <section class="productos">
-            <!-- Lista de productos -->
-            <div class="producto" onclick="mostrarVentana()">
-                <img src="Laptop.jpg" alt="Laptop HP">
-                <h2>Laptop HP 240 G9</h2>
-                <p class="precio">$5,299</p>
-            </div>
-        </section>
-    </main>
+
+    <section class="productos">
+        <!-- Producto 1 -->
+        <div class="producto">
+            <img src="Laptop.jpg" alt="Laptop HP 240 G9">
+            <h2>Laptop HP 240 G9</h2>
+            <p><strong>Descripción:</strong> Laptop con procesador Intel Celeron, 8GB RAM y 256GB SSD.</p>
+            <p><strong>Precio:</strong> $5,299</p>
+            <p><strong>Categoría:</strong> Computadoras Portátiles</p>
+            <p><strong>Disponibilidad:</strong> En Stock</p>
+            <button onclick="mostrarVentana(1)">Ver más</button>
+        </div>
+
+        <!-- Producto 2 -->
+        <div class="producto">
+            <img src="Laptop2.jpg" alt="Laptop Dell XPS 13">
+            <h2>Laptop Dell XPS 13</h2>
+            <p><strong>Descripción:</strong> Laptop premium con Intel i7, 16GB RAM y 512GB SSD.</p>
+            <p><strong>Precio:</strong> $9,999</p>
+            <p><strong>Categoría:</strong> Computadoras Portátiles</p>
+            <p><strong>Disponibilidad:</strong> En Stock</p>
+            <button onclick="mostrarVentana(2)">Ver más</button>
+        </div>
+
+        <!-- Producto 3 -->
+        <div class="producto">
+            <img src="Laptop3.jpg" alt="Laptop Lenovo IdeaPad">
+            <h2>Laptop Lenovo IdeaPad</h2>
+            <p><strong>Descripción:</strong> Laptop con Intel Core i5, 8GB RAM y 512GB SSD.</p>
+            <p><strong>Precio:</strong> $6,499</p>
+            <p><strong>Categoría:</strong> Computadoras Portátiles</p>
+            <p><strong>Disponibilidad:</strong> En Stock</p>
+            <button onclick="mostrarVentana(3)">Ver más</button>
+        </div>
+
+        <!-- Producto 4 -->
+        <div class="producto">
+            <img src="Laptop4.jpg" alt="Laptop Acer Aspire 5">
+            <h2>Laptop Acer Aspire 5</h2>
+            <p><strong>Descripción:</strong> Laptop con AMD Ryzen 5, 8GB RAM y 256GB SSD.</p>
+            <p><strong>Precio:</strong> $5,799</p>
+            <p><strong>Categoría:</strong> Computadoras Portátiles</p>
+            <p><strong>Disponibilidad:</strong> En Stock</p>
+            <button onclick="mostrarVentana(4)">Ver más</button>
+        </div>
+
+        <!-- Producto 5 -->
+        <div class="producto">
+            <img src="Laptop5.jpg" alt="Laptop HP Pavilion">
+            <h2>Laptop HP Pavilion</h2>
+            <p><strong>Descripción:</strong> Laptop con Intel i5, 8GB RAM y 1TB HDD.</p>
+            <p><strong>Precio:</strong> $7,199</p>
+            <p><strong>Categoría:</strong> Computadoras Portátiles</p>
+            <p><strong>Disponibilidad:</strong> En Stock</p>
+            <button onclick="mostrarVentana(5)">Ver más</button>
+        </div>
+
+        <!-- Producto 6 -->
+        <div class="producto">
+            <img src="Laptop6.jpg" alt="Laptop Dell Inspiron 15">
+            <h2>Laptop Dell Inspiron 15</h2>
+            <p><strong>Descripción:</strong> Laptop con Intel i3, 4GB RAM y 500GB HDD.</p>
+            <p><strong>Precio:</strong> $4,999</p>
+            <p><strong>Categoría:</strong> Computadoras Portátiles</p>
+            <p><strong>Disponibilidad:</strong> En Stock</p>
+            <button onclick="mostrarVentana(6)">Ver más</button>
+        </div>
+    </section>
 
     <!-- Ventana emergente -->
     <div id="ventanaEmergente" class="ventana">
         <div class="contenido">
             <span class="cerrar" onclick="cerrarVentana()">&times;</span>
-            <img src="Laptop.jpg" alt="Laptop HP">
-            <h2>Laptop HP 240 G9 plateada 14"</h2>
-            <p class="descripcion">
-                Procesador: Intel Celeron N4500 <br>
-                Capacidad: 8 GB RAM | 256 GB SSD <br>
-                Sistema operativo: Windows 11 Home <br>
-                Precio: <span class="precio">$5,299</span>
-            </p>
+            <h2 id="productoTitulo"></h2>
+            <p><strong>Descripción:</strong> <span id="productoDescripcion"></span></p>
+            <p><strong>Precio:</strong> <span id="productoPrecio"></span></p>
+            <p><strong>Categoría:</strong> <span id="productoCategoria"></span></p>
+            <p><strong>Disponibilidad:</strong> <span id="productoDisponibilidad"></span></p>
             <button>Agregar al presupuesto</button>
         </div>
     </div>
+
     <script src="jscript.js"></script>
 </body>
 </html>
