--- a/Productos.html
+++ b/Productos.html
@@ -7,9 +7,40 @@
     <link rel="stylesheet" href="Productos.css">
 </head>
 <body>
+    <!-- Encabezado con logotipo y barra de búsqueda -->
     <header>
-        <h1>Catálogo de Computadoras</h1>
+        <h1>Prepárate para Navidad este 2024</h1>
+        <marquee width="100" scrollamount="10">JO JO JO!</marquee>
+        <div class="logo">
+            <img src="img/logo.png" alt="Logotipo">
+        </div>
     </header>
+
+    <div class="search-bar">
+        <div class="search-container">
+            <input type="text" placeholder="¿Buscas algo en específico?">
+            <button><img src="img/lupa.png" alt="Buscar" width="20"></button>
+        </div>
+        <div class="message">
+            <p>"Calidad y seguridad al mejor precio"</p>
+        </div>
+    </div>
+    
+    <div class="linea-separadora"></div>
+
+    <!-- Barra de navegación -->
+    <nav>
+        <a href="Perfil.php" class="logo-perfil">
+            <img src="img/icono-perfil.png" alt="Perfil">
+            Perfil
+        </a>
+        <a href="Inicio.html">Inicio</a>
+        <a href="Información.html">Acerca de nosotros</a>
+        <a href="Productos.html">Productos</a>
+        <a href="Servicios.html">Servicios disponibles</a>
+        <a href="Presupuesto.html">Presupuesto</a>
+    </nav>
+
 
     <section class="productos">
         <!-- Producto 1 -->
