usuario puede modificar datos suyos

--- a/Productos.html
+++ b/Productos.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Catalogo de productos</title>
-    <link rel="stylesheet" href="Productos.css">
+    <link rel="stylesheet" href="css/Productos.css">
 </head>
 <body>
     <!-- Encabezado con logotipo y barra de búsqueda -->
@@ -45,7 +45,7 @@
     <section class="productos">
         <!-- Producto 1 -->
         <div class="producto">
-            <img src="Laptop.jpg" alt="Laptop HP 240 G9">
+            <img src="img/Laptop.jpg" alt="Laptop HP 240 G9">
             <h2>Laptop HP 240 G9</h2>
             <p><strong>Descripción:</strong> Laptop con procesador Intel Celeron, 8GB RAM y 256GB SSD.</p>
             <p><strong>Precio:</strong> $5,299</p>
@@ -56,7 +56,7 @@
 
         <!-- Producto 2 -->
         <div class="producto">
-            <img src="Laptop2.jpg" alt="Laptop Dell XPS 13">
+            <img src="img/Laptop2.jpg" alt="Laptop Dell XPS 13">
             <h2>Laptop Dell XPS 13</h2>
             <p><strong>Descripción:</strong> Laptop premium con Intel i7, 16GB RAM y 512GB SSD.</p>
             <p><strong>Precio:</strong> $9,999</p>
@@ -67,7 +67,7 @@
 
         <!-- Producto 3 -->
         <div class="producto">
-            <img src="Laptop3.jpg" alt="Laptop Lenovo IdeaPad">
+            <img src="img/Laptop3.jpg" alt="Laptop Lenovo IdeaPad">
             <h2>Laptop Lenovo IdeaPad</h2>
             <p><strong>Descripción:</strong> Laptop con Intel Core i5, 8GB RAM y 512GB SSD.</p>
             <p><strong>Precio:</strong> $6,499</p>
@@ -78,7 +78,7 @@
 
         <!-- Producto 4 -->
         <div class="producto">
-            <img src="Laptop4.jpg" alt="Laptop Acer Aspire 5">
+            <img src="img/Laptop4.jpg" alt="Laptop Acer Aspire 5">
             <h2>Laptop Acer Aspire 5</h2>
             <p><strong>Descripción:</strong> Laptop con AMD Ryzen 5, 8GB RAM y 256GB SSD.</p>
             <p><strong>Precio:</strong> $5,799</p>
@@ -89,7 +89,7 @@
 
         <!-- Producto 5 -->
         <div class="producto">
-            <img src="Laptop5.jpg" alt="Laptop HP Pavilion">
+            <img src="img/Laptop5.jpg" alt="Laptop HP Pavilion">
             <h2>Laptop HP Pavilion</h2>
             <p><strong>Descripción:</strong> Laptop con Intel i5, 8GB RAM y 1TB HDD.</p>
             <p><strong>Precio:</strong> $7,199</p>
@@ -100,7 +100,7 @@
 
         <!-- Producto 6 -->
         <div class="producto">
-            <img src="Laptop6.jpg" alt="Laptop Dell Inspiron 15">
+            <img src="img/Laptop6.jpg" alt="Laptop Dell Inspiron 15">
             <h2>Laptop Dell Inspiron 15</h2>
             <p><strong>Descripción:</strong> Laptop con Intel i3, 4GB RAM y 500GB HDD.</p>
             <p><strong>Precio:</strong> $4,999</p>
@@ -123,6 +123,6 @@
         </div>
     </div>
 
-    <script src="jscript.js"></script>
+    <script src="js/script_ventana.js"></script>
 </body>
 </html>
