Css de productos actualizado

--- a/Inicio.html
+++ b/Inicio.html
@@ -63,7 +63,13 @@
         </div>
 
         <div class="product-card">
-            <img src="ruta/a/producto3.png" alt="Producto 3">
+            <img src="ruta/a/producto3.png" alt="Producto 4">
+            <p class="product-title">Laptop HP 240 G9 plateada 14"</p>
+            <p class="product-price">$5,299</p>
+        </div>
+
+        <div class="product-card">
+            <img src="ruta/a/producto3.png" alt="Producto 5">
             <p class="product-title">Laptop HP 240 G9 plateada 14"</p>
             <p class="product-price">$5,299</p>
         </div>
