--- a/Inicio.html
+++ b/Inicio.html
@@ -37,7 +37,7 @@
         </a>
         <a href="Inicio.html">Inicio</a>
         <a href="Información.html">Acerca de nosotros</a>
-        <a href="Productos.html">Productos</a>
+        <a href="Productos.php">Productos</a>
         <a href="Servicios.html">Servicios disponibles</a>
         <a href="Presupuesto.html">Presupuesto</a>
     </nav>
