--- a/Servicios.html
+++ b/Servicios.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Catalogo de productos</title>
-    <link rel="stylesheet" href="Servicios.css">
+    <link rel="stylesheet" href="css/Servicios.css">
 </head>
 <body>
     <!-- Encabezado con logotipo y barra de búsqueda -->
@@ -36,7 +36,7 @@
         </a>
         <a href="Inicio.html">Inicio</a>
         <a href="Información.html">Acerca de nosotros</a>
-        <a href="Productos.html">Productos</a>
+        <a href="Productos.php">Productos</a>
         <a href="Servicios.html">Servicios disponibles</a>
         <a href="Presupuesto.html">Presupuesto</a>
     </nav>
@@ -117,6 +117,6 @@
     </section>
     
 
-    <script src="script.js"></script>
+    <script src="js/script_ventana.js"></script>
 </body>
 </html>
