--- a/Información.html
+++ b/Información.html
@@ -19,8 +19,8 @@
             <a href="Inicio.html">Inicio</a>
         <a href="Información.html">Acerca de nosotros</a>
         <a href="Productos.php">Productos</a>
-        <a href="Servicios.html">Servicios disponibles</a>
-        <a href="Presupuesto.html">Presupuesto</a>
+        <a href="Servicios.php">Servicios disponibles</a>
+        <a href="Presupuesto.php">Presupuesto</a>
         </nav>
     </header>
 
