--- a/Información.html
+++ b/Información.html
@@ -52,6 +52,11 @@
             en el plazo establecido.</p>  
     </div>  
 
+    <!-- Logo en la esquina inferior izquierda -->  
+    <div class="logo-container">  
+        <img src="img/logo.png" alt="Logo">  
+    </div>  
+
 </body>  
 
 </html>
