Ajustes de código

--- a/Información.html
+++ b/Información.html
@@ -1,14 +1,15 @@
-<!DOCTYPE html>  
-<html lang="es">  
+<!DOCTYPE html>
+<html lang="es">
 
-<head>  
-    <meta charset="UTF-8">  
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">  
-    <title>TASK32 / SERVICIO TÉCNICO EN COMPUTADORAS</title>  
+<head>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>TASK32 / SERVICIO TÉCNICO EN COMPUTADORAS</title>
     <link rel="stylesheet" href="css/Información.css">
-</head>  
+    <link rel="stylesheet" href="css/Navegación.css">
+</head>
 
-<body>  
+<body>
 
     <!-- Encabezado con navegación -->
     <header>
@@ -17,46 +18,46 @@
                 <img src="img/icono-perfil.png" alt="Perfil">Perfil
             </a>
             <a href="Inicio.php">Inicio</a>
-        <a href="Información.html">Acerca de nosotros</a>
-        <a href="Productos.php">Productos</a>
-        <a href="Servicios.php">Servicios disponibles</a>
-        <a href="Presupuesto.php">Presupuesto</a>
+            <a href="Información.html">Acerca de nosotros</a>
+            <a href="Productos.php">Productos</a>
+            <a href="Servicios.php">Servicios disponibles</a>
+            <a href="Presupuesto.php">Presupuesto</a>
         </nav>
     </header>
 
-    <div class="content">  
-        <h2>Nombre del Negocio: TASK32 / SERVICIO TÉCNICO EN COMPUTADORAS</h2>  
-        <p><strong>Ubicación:</strong> Av. Lago de Coyuca 329, Brisas del Lago, 37207 León de los Aldama, Gto.</p>  
+    <div class="content">
+        <h2>Nombre del Negocio: TASK32 / SERVICIO TÉCNICO EN COMPUTADORAS</h2>
+        <p><strong>Ubicación:</strong> Av. Lago de Coyuca 329, Brisas del Lago, 37207 León de los Aldama, Gto.</p>
 
-        <div class="map">  
-            <iframe  
-                src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d3720.547480750182!2d-101.65404022568973!3d21.170399582900533!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x842bb92dc069d23d%3A0x75f118c8475f303c!2sAv.%20Lago%20de%20Coyuca%20329%2C%20Brisas%20del%20Lago%2C%2010000%20Le%C3%B3n%20de%20los%20Aldama%2C%20Gto.!5e0!3m2!1ses-419!2smx!4v1729560500024!5m2!1ses-419!2smx"  
-                allowfullscreen="" loading="lazy"></iframe>  
-        </div>  
+        <div class="map">
+            <iframe
+                src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d3720.547480750182!2d-101.65404022568973!3d21.170399582900533!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x842bb92dc069d23d%3A0x75f118c8475f303c!2sAv.%20Lago%20de%20Coyuca%20329%2C%20Brisas%20del%20Lago%2C%2010000%20Le%C3%B3n%20de%20los%20Aldama%2C%20Gto.!5e0!3m2!1ses-419!2smx!4v1729560500024!5m2!1ses-419!2smx"
+                allowfullscreen="" loading="lazy"></iframe>
+        </div>
 
-        <p class="link-map">  
-            <a href="https://maps.app.goo.gl/HfwEnqBbpGPayete8" target="_blank">Ver mapa en Google Maps</a>  
-        </p>  
+        <p class="link-map">
+            <a href="https://maps.app.goo.gl/HfwEnqBbpGPayete8" target="_blank">Ver mapa en Google Maps</a>
+        </p>
 
-        <h3>Descripción del negocio:</h3>  
-        <p>Somos una empresa dedicada a realizar actividades de ensamblaje y configuración de equipos computacionales  
-            así como a la revisión y reparación básica de los mismos, además de la venta individual de equipos de  
-            cómputo y otros componentes electrónicos.</p>  
+        <h3>Descripción del negocio:</h3>
+        <p>Somos una empresa dedicada a realizar actividades de ensamblaje y configuración de equipos computacionales
+            así como a la revisión y reparación básica de los mismos, además de la venta individual de equipos de
+            cómputo y otros componentes electrónicos.</p>
 
-        <h3>Misión:</h3>  
+        <h3>Misión:</h3>
         <p>Pretendemos ayudar a todas las personas y empresas, ubicadas en nuestro municipio (León,
             Gto.) y que hagan uso de equipos computacionales, con la mejora y mantenimiento de sus
             equipos. Queremos diferenciarnos de otras empresas con la misma finalidad en siempre entregar
             un trabajo ejemplar, bien realizado a través de nuestros empleados capacitados y lo más
             importante, acordar desde un principio con el cliente el tiempo para realizar el trabajo y entregarlo
-            en el plazo establecido.</p>  
-    </div>  
+            en el plazo establecido.</p>
+    </div>
 
-    <!-- Logo en la esquina inferior izquierda -->  
-    <div class="logo-container">  
-        <img src="img/logo.png" alt="Logo">  
-    </div>  
+    <!-- Logo en la esquina inferior izquierda -->
+    <div class="logo-container">
+        <img src="img/logo.png" alt="Logo">
+    </div>
 
-</body>  
+</body>
 
 </html>
