--- a/Registro.html
+++ b/Registro.html
@@ -1,11 +1,13 @@
 <!DOCTYPE html>
 <html lang="es">
+
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Registro</title>
     <link rel="stylesheet" href="css/Registro.css">
 </head>
+
 <body>
 
     <!-- Logotipo en la parte superior izquierda -->
@@ -77,9 +79,11 @@
 
         <!-- Texto de términos y condiciones -->
         <div class="terms-text">
-            Al continuar, aceptas los <a href="docs/Términos y condiciones TASK-32.pdf">términos y condiciones</a> de TASK 32.
+            Al continuar, aceptas los <a href="docs/Términos y condiciones TASK-32.pdf">términos y condiciones</a> de
+            TASK 32.
         </div>
     </div>
 
 </body>
+
 </html>
